--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="css/style.min.css"/>
   </head>
   <body>
+    <header>
+      <div class="container">
+        <div class="header__content"><img class="logo" src="img/Logo.webp" alt="Logo"/>
+          <nav class="main-nav">
+            <ul class="main-nav__list">
+              <li><a href="#">News</a></li>
+              <li><a href="#">Events</a></li>
+              <li><a href="#">My classes</a></li>
+              <li><a href="#">My cases</a></li>
+              <li><a href="#">My finances</a></li>
+              <li><a href="#">My to-do list</a></li>
+              <li><a href="#">My appointments</a></li>
+              <li><a href="#">My documents</a></li>
+            </ul>
+          </nav><img class="notifications-icon" src="img/power.webp" alt="Notifications"/><img class="avatar" src="img/Account.webp" alt="Avatar"/>
+        </div>
+      </div>
+    </header>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
