--- a/app/to-do.html
+++ b/app/to-do.html
@@ -73,26 +73,24 @@
               <div class="profile__item">Contact Support</div>
               <div class="profile__item">News</div>
             </div>
-          </div>
-          <div class="burger-menu">
-            <input type="checkbox" id="burger-menu__toggle"/>
-            <label class="burger-menu__btn" for="burger-menu__toggle"><span></span></label>
-            <nav class="main-nav">
-              <ul class="main-nav__list">
-                <li><a href="#">News</a></li>
-                <li><a href="#">Events</a></li>
-                <li><a href="#">My classes</a></li>
-                <li><a href="#">My cases</a></li>
-                <li><a href="#">My finances</a></li>
-                <li><a href="to-do.html">My to-do list</a></li>
-                <li><a href="#">My appointments</a></li>
-                <li><a href="#">My documents</a></li>
-              </ul>
-            </nav>
-          </div>
+          </div><img class="burger" src="img/burger.svg" alt="Burger Menu"/>
         </div>
       </div>
     </header>
+    <div class="burger-menu">
+      <nav class="main-nav"><img class="burger-menu__close" src="img/burger-close.svg" alt="Burger Close"/>
+        <ul class="main-nav__list">
+          <li><a href="#">News</a></li>
+          <li><a href="#">Events</a></li>
+          <li><a href="#">My classes</a></li>
+          <li><a href="#">My cases</a></li>
+          <li><a href="#">My finances</a></li>
+          <li><a href="to-do.html">My to-do list</a></li>
+          <li><a href="#">My appointments</a></li>
+          <li><a href="#">My documents</a></li>
+        </ul>
+      </nav>
+    </div>
     <div class="to-do-list">
       <div class="container">
         <div class="title-wrapper">
