--- a/home.html
+++ b/home.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>My To-Do List</title>
+    <title>Cal state East Bay</title>
     <link rel="stylesheet" href="css/style.min.css"/>
-    <link rel="stylesheet" href="css/to-do.min.css"/>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
   </head>
   <body>
+    <div class="alert">
+      <div class="alert__text">You have 1 expired deadline and 11 deadlines expires soon.</div><a class="alert__link" href="to-do.html">View To-Do List</a><img class="close" src="img/cross.svg" alt="Close"/>
+    </div>
     <header>
       <div class="container">
         <div class="header__content"><a href="index.html"><img class="logo" src="img/Logo.webp" alt="Logo"/></a>
@@ -93,100 +95,104 @@
         </ul>
       </nav>
     </div>
-    <div class="to-do-list">
+    <section class="search-wrapper">
+      <div class="container">
+        <div class="search-wrapper__content">
+          <h2 class="search__title">Welcome to Student Hub</h2>
+          <div class="search">
+            <input class="search__input" type="text"/><i class="search-icon"></i>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="navigation-btns">
+      <div class="container">
+        <nav class="nav-by-btns"><a class="tile" href="#">My Classes</a><a class="tile" href="#">My Cases</a><a class="tile" href="#">My Finances</a><a class="tile" href="#">My To-Do List</a><a class="tile" href="#">My Appointments</a><a class="tile" href="#">My Documents</a></nav>
+      </div>
+    </section>
+    <section class="events">
+      <div class="container">
+        <div class="events__content">
+          <div class="title-wrapper">
+            <h2>Upcoming Events</h2><a href="#">View all Events</a>
+          </div>
+          <div class="slider">
+            <div class="slider__item">
+              <div class="event-card">
+                <div class="event-card__text">
+                  <div class="event-card__title">Time Management Student Success</div>
+                  <div class="event-card__subtitle">Workshop</div>
+                </div>
+                <div class="note">
+                  <div class="note__date">5/13/2020</div>
+                  <div class="note__time">19 PM — 22 PM<span class="place">Library</span></div>
+                </div>
+              </div>
+            </div>
+            <div class="slider__item">
+              <div class="event-card">
+                <div class="event-card__text">
+                  <div class="event-card__title">Wednesday&nbsp;Student Wnd-Down Free Meditation </div>
+                  <div class="event-card__subtitle">Online talks</div>
+                </div>
+                <div class="note">
+                  <div class="note__date">5/13/2020</div>
+                  <div class="note__time">19 PM — 22 PM<span class="place">Library</span></div>
+                </div>
+              </div>
+            </div>
+            <div class="slider__item">
+              <div class="event-card">
+                <div class="event-card__text">
+                  <div class="event-card__title">Staying job ready after Covid-19</div>
+                  <div class="event-card__subtitle">Online-lecture</div>
+                </div>
+                <div class="note">
+                  <div class="note__date">5/13/2020</div>
+                  <div class="note__time">19 PM — 22 PM<span class="place">Library</span></div>
+                </div>
+              </div>
+            </div>
+            <div class="slider__item">
+              <div class="event-card">
+                <div class="event-card__text">
+                  <div class="event-card__title">Time Management Student Success</div>
+                  <div class="event-card__subtitle">Workshop</div>
+                </div>
+                <div class="note">
+                  <div class="note__date">5/13/2020</div>
+                  <div class="note__time">19 PM — 22 PM<span class="place">Library</span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="news">
       <div class="container">
         <div class="title-wrapper">
-          <h2>My To-Do List</h2>
-          <div class="title-notes"><a class="title-notes__item" href="#">Expired</a><a class="title-notes__item" href="#">Expires Soon</a></div>
+          <h2>News</h2><a href="#">View all News</a>
         </div>
-        <div class="filter">
-          <button class="active">Admisson</button>
-          <button>Finance</button>
-        </div>
-        <div class="to-do-list__content">
-          <div class="to-do-card">
-            <div class="to-do-card__title">
-              <div class="sender expired">Administration</div>
-              <div class="expire-alert expired">Expired</div>
-            </div>
-            <div class="to-do-card__text">Submitting documents to&nbsp;the Cal State East Bay documents to&nbsp;the Cal State...</div>
-            <div class="to-do-card__deadline"><img src="img/clock.svg" alt="Clock icon"/><span>Deadline:</span>
-              <div class="deadline-date">May 24, 2020</div>
-            </div>
+        <div class="news__content">
+          <div class="news__item"><img src="img/news1.webp" alt="News 1"/>
+            <div class="news__title">Feature</div>
+            <div class="news__text">When is Wakanda: Professors, alumni partner with Oakland museum to host Afrofuturism...</div>
+            <div class="news__date">May 3, 2020</div>
           </div>
-          <div class="to-do-card">
-            <div class="to-do-card__title">
-              <div class="sender">Administration</div>
-              <div class="expire-alert expires-soon">Expires Soon</div>
-            </div>
-            <div class="to-do-card__text">Tuition per Semester</div>
-            <div class="to-do-card__deadline"><img src="img/clock.svg" alt="Clock icon"/><span>Deadline:</span>
-              <div class="deadline-date expires-soon">May 24, 2020</div>
-            </div>
+          <div class="news__item"><img src="img/news2.webp" alt="News 1"/>
+            <div class="news__title">Feature</div>
+            <div class="news__text">A Holistic Approach to Student Advising</div>
+            <div class="news__date">May 3, 2020</div>
           </div>
-          <div class="to-do-card">
-            <div class="to-do-card__title">
-              <div class="sender">Administration</div>
-              <div class="expire-alert expires-soon">Expires Soon</div>
-            </div>
-            <div class="to-do-card__text">Submitting documents to the Cal State East Bay</div>
-            <div class="to-do-card__deadline"><img src="img/clock.svg" alt="Clock icon"/><span>Deadline:</span>
-              <div class="deadline-date expires-soon">May 24, 2020</div>
-            </div>
+          <div class="news__item"><img src="img/news3.webp" alt="News 1"/>
+            <div class="news__title">Feature</div>
+            <div class="news__text">Cal State East Bay faculty, students spend month in Okinawa capturing histories</div>
+            <div class="news__date">May 3, 2020</div>
           </div>
-          <div class="to-do-card">
-            <div class="to-do-card__title">
-              <div class="sender">Administration</div>
-              <div class="expire-alert">Expires Soon</div>
-            </div>
-            <div class="to-do-card__text">Submitting documents to the Cal State East Bay</div>
-            <div class="to-do-card__deadline"><img src="img/clock.svg" alt="Clock icon"/><span>Deadline:</span>
-              <div class="deadline-date expires-soon">May 24, 2020</div>
-            </div>
-          </div>
-          <div class="to-do-card">
-            <div class="to-do-card__title">
-              <div class="sender">Administration</div>
-              <div class="expire-alert">Expires Soon</div>
-            </div>
-            <div class="to-do-card__text">Submitting documents to the Cal State East Bay</div>
-            <div class="to-do-card__deadline"><img src="img/clock.svg" alt="Clock icon"/><span>Deadline:</span>
-              <div class="deadline-date expires-soon">May 24, 2020</div>
-            </div>
-          </div>
-          <div class="to-do-card">
-            <div class="to-do-card__title">
-              <div class="sender">Administration</div>
-              <div class="expire-alert">Expires Soon</div>
-            </div>
-            <div class="to-do-card__text">Submitting documents to the Cal State East Bay</div>
-            <div class="to-do-card__deadline"><img src="img/clock.svg" alt="Clock icon"/><span>Deadline:</span>
-              <div class="deadline-date expires-soon">May 24, 2020</div>
-            </div>
-          </div>
-          <div class="to-do-card">
-            <div class="to-do-card__title">
-              <div class="sender">Administration</div>
-              <div class="expire-alert">Expires Soon</div>
-            </div>
-            <div class="to-do-card__text">Submitting documents to the Cal State East Bay</div>
-            <div class="to-do-card__deadline"><img src="img/clock.svg" alt="Clock icon"/><span>Deadline:</span>
-              <div class="deadline-date expires-soon">May 24, 2020</div>
-            </div>
-          </div>
-          <div class="to-do-card">
-            <div class="to-do-card__title">
-              <div class="sender">Administration</div>
-              <div class="expire-alert">Expires Soon</div>
-            </div>
-            <div class="to-do-card__text">Submitting documents to the Cal State East Bay</div>
-            <div class="to-do-card__deadline"><img src="img/clock.svg" alt="Clock icon"/><span>Deadline:</span>
-              <div class="deadline-date expires-soon">May 24, 2020</div>
-            </div>
-          </div>
-        </div><a class="more-link" href="#">More To-Dos</a>
+        </div><a class="more-link" href="#">More News</a>
       </div>
-    </div>
+    </section>
     <footer class="footer">
       <div class="footer__top">
         <div class="container"><img class="logo" src="img/Logo.webp" alt="Logo"/>
@@ -207,7 +213,7 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
-    <script src="js/to-do.js"></script>
+    <script src="js/main.js"></script>
     <script src="js/header.js"></script>
   </body>
 </html>
