--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="css/style.min.css"/>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
   </head>
-  <body class="index-body">
-    <h1 class="index-h1">Верстка страниц сайта университета</h1>
-    <div class="html-pages">
-      <div class="html-pages__item"><a href="home.html"><img src="img/home.JPG" alt="Home page"/></a></div>
-      <div class="html-pages__item"><a href="to-do.html"><img src="img/to-do.JPG" alt="To-do list page"/></a></div>
+  <body>
+    <div class="index-body">
+      <h1 class="index-h1">Верстка страниц сайта университета</h1>
+      <div class="html-pages">
+        <div class="html-pages__item"><a href="home.html"><img src="img/home.JPG" alt="Home page"/></a></div>
+        <div class="html-pages__item"><a href="to-do.html"><img src="img/to-do.JPG" alt="To-do list page"/></a></div>
+      </div>
     </div>
   </body>
 </html>
